Pass over text to make more ML4SE than NL4SE

--- a/index.html
+++ b/index.html
@@ -124,28 +124,27 @@
       <section class="content-block" id="overview">
         <h2>Overview</h2>
         <p>
-          The proliferation of open-source projects has led to large amounts of source code
-          and related artifacts: arguably, the rich and open resources associated with 
-          software--including open source repositories, Q/A sites, change histories, and
-          communications between developers--are the richest and most detailed information
-          resource for any technical area.
-          Recently it has been discovered that “natural”, human-produced software has many 
-          interesting statistical regularities. As a consequence code corpora, just like 
-          natural language corpora, are amenable to statistical modeling, and a number of 
-          software tasks such as coding, testing, porting, bug-patching etc are potentially
-          enhanced by the use of these statistical models. 
+          Software has become an essential part of everyday life, and its development is
+          producing enormous amounts of data.
+          This includes not only source code, but also related artifacts such as change
+          histories, test results, other execution behavior, bug reports, code reviews,
+          and communications between developers.
+          This constitutes an amazing wealth of rich and detailed information.
+          At the same time, machine learning is flourishing, with a range of powerful
+          new technologies achieving practical successes in many domains.
         </p>
-            
+
         <p>
-          This interdisciplinary workshop will explore issues related to the statistical
-          modeling of software corpora, including topics such as:  modeling repetitiveness 
-          in source code; use of language models for the code suggestion in IDEs;  using 
-          probabilistic grammars to mine programming idioms; statistical methods for type 
-          inference in a dynamically typed languages; statistical machine translation for 
-          porting applications between programming languages, or “mini-fying” Javascript;  
-          using statistical language models to find bugs; or statistical methods for 
-          automatic code patching, code summarization, code retrieval, code annotation, or
-          test generation.
+          This workshop will bring together researchers interested in the intersection
+          of Software Engineering and Machine Learning research.
+          There is great promise in solving and assisting with software authoring and
+          maintenance tasks such as coding, testing, debugging, porting, bug-patching,
+          refactoring, optimizing, etc.
+          Machine Learning gives new tools for addressing Software Engineering research
+          challenges, and Software Engineering challenges motivate new Machine Learning
+          research.
+          In the workshop we will discuss recent advances in this area, what challenges
+          remain, and share ideas for how to continue progressing forward.
         </p>
 
         <p>
@@ -162,18 +161,19 @@
         <h2>Call for papers</h2>
           <!--<p>Download and print our <a href="https://nl4se2018.github.io/NL4SE18-Flyer.pdf">call for papers!</a></p>-->
           <p>
-            This interdisciplinary workshop will explore issues related to the statistical 
-            modeling of software corpora, including topics such as:
+            This interdisciplinary workshop will explore issues related to the
+            application of Machine Learning techniques to Software Engineering
+            tasks, including topics such as:
           </p>
           <ul>
-            <li>Modeling repetitiveness ("naturalness") in source code</li>
-            <li>Applications to code suggestion in IDEs</li>
+            <li>Code suggestion in IDEs (modelling "naturalness" of code)</li>
             <li>Mining programming idioms</li>
             <li>Statistical inference of types and other annotations</li>
-            <li>Applications of Statistical Machine Translation for porting and reverse engineering</li>
-            <li>Statistical methods for bug localization</li>
-            <li>Statistical methods for automatic code patching, code summarization, code retrieval, code annotation, or test generation</li>
-            <li>Formal and informal methods for enhancing assurance via NLP techniques</li>
+            <li>Software bug and "smell" identification</li>
+            <li>Automated program repair</li>
+            <li>Program synthesis (e.g. superoptimization or from natural language)</li>
+            <li>Code summarization, code retrieval, code annotation</li>
+            <li>Automatically identifying relevant coding collaborators</li> 
           </ul>
           <p>
             We invite short position papers or early-stage research papers of at most 4 pages
@@ -181,7 +181,7 @@
           </p>
           <p>
             If you are looking for software corpora to study, please be aware that the
-            <a href="https://conala-corpus.github.io/" target="_blank">Conala Corpus</a>
+            <a href="https://conala-corpus.github.io/" target="_blank">CoNaLa Corpus</a>
             (curated by CMU) and
             <a href="https://github.com/TellinaTool/nl2bash" target="_blank">NL2Bash Corpus</a>
             (curated by the University of Washington) are available to use.
