- Adds registration information - Changes submission deadline to April 1 - Says we're ok with concurrent submissions

--- a/index.html
+++ b/index.html
@@ -159,7 +159,6 @@
       
       <section class="content-block" id="call_for_papers"> 
         <h2>Call for papers</h2>
-          <!--<p>Download and print our <a href="https://nl4se2018.github.io/NL4SE18-Flyer.pdf">call for papers!</a></p>-->
           <p>
             This interdisciplinary workshop will explore issues related to the
             application of Machine Learning techniques to Software Engineering
@@ -174,34 +173,41 @@
             <li>Program synthesis (e.g. superoptimization or from natural language)</li>
             <li>Code summarization, code retrieval, code annotation</li>
             <li>Automatically identifying relevant coding collaborators</li> 
+            <li>New applications of machine learning to source code and related artifacts</li> 
           </ul>
           <p>
             We invite short position papers or early-stage research papers of at most 4 pages
             in length.  Several submissions will be invited for presentation.
           </p>
-          <p>
-            If you are looking for software corpora to study, please be aware that the
-            <a href="https://conala-corpus.github.io/" target="_blank">CoNaLa Corpus</a>
-            (curated by CMU) and
-            <a href="https://github.com/TellinaTool/nl2bash" target="_blank">NL2Bash Corpus</a>
-            (curated by the University of Washington) are available to use.
-          </p>
-          <p>You are encouraged to use the dataset to demonstrate your technology.</p>
 
         <h3>Submission information</h3>
           <p>
             We invite contributions of up to <b>four</b> pages in length describing early-stage
-            research or position papers.  All submissions must be previously unpublished and not
-            submitted elsewhere.
+            research or position papers.
+
+	    All submissions must be previously unpublished; submissions that are posted on arxiv or under review elsewhere are welcome.
           </p>
           <p>
-            <a href="https://easychair.org/conferences/?conf=ml4se19" target="_blank">Submission website via EasyChair</a>
+	    Submissions instructions will be announced here. Please check back nearer to the deadline.
           </p>
       </section>
 
+      <section class="content-block" id="call_for_papers"> 
+        <h2>Registration</h2>
+        <p>
+	  Space is limited, so pre-registration is required.
+	  There is no registration fee.
+	  Slots will be reserved for the program committee and authors of accepted papers.
+	  We welcome participation from others, but we may need to cap registration if we exceed space constraints.
+	  If you would like to attend, please fill out
+	  the <a href="https://docs.google.com/forms/d/e/1FAIpQLSf277R-W9xUBsMSnH8oo5vvmB0g8071Wl2q-nZLQbcJ1BSjtw/viewform">registration request form</a>.
+	  However, please note that <b>registration is not confirmed until you receive an email from the organizers confirming space availability</b> (the form submission confirmation is not sufficient).
+          </p>
+      </section>
+      
       <section class="content-block" id="important_dates">
         <h2>Important Dates</h2>
-        <dt>March 21st, 2019</dt> <dd>Paper submission deadline (AoE)</dd>
+        <dt>April 1st, 2019</dt> <dd>Paper submission deadline (AoE)</dd>
         <dt>April 13th, 2019</dt> <dd>Author notification</dd> 
         <dt>June 1st, 2019</dt> <dd>Workshop</dd>
       </section>
