Add submission page.

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 	    Short versions of recently published submissions are also welcome, but priority will be given to work that hasn't previously been presented at a similar workshop.
           </p>
           <p>
-	    Submissions instructions will be announced here. Please check back nearer to the deadline.
+            Please submit through <a href="https://easychair.org/conferences/?conf=ml4se">EasyChair</a>.
           </p>
       </section>
 
