Add paper template

--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
 	    Short versions of recently published submissions are also welcome, but priority will be given to work that hasn't previously been presented at a similar workshop.
           </p>
           <p>
-            Please submit through <a href="https://easychair.org/conferences/?conf=ml4se">EasyChair</a>.
+            Please submit through <a href="https://easychair.org/conferences/?conf=ml4se">EasyChair</a>,
+            if possible using <a href="Master-Template-ML4SE2019.tar.gz">our paper style template</a>.
           </p>
       </section>
 
