Update submission deadline

--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
       
       <section class="content-block" id="important_dates">
         <h2>Important Dates</h2>
-        <dt>April 5, 2019</dt> <dd>Paper submission deadline (AoE)</dd>
-        <dt>April 19, 2019</dt> <dd>Author notification</dd> 
+	<dt><del>April 5, 2019</del> April 19, 2019</dt> <dd>Paper submission deadline (AoE)</dd>
+        <dt><del>April 19, 2019</del> April 22, 2019</dt> <dd>Author notification</dd> 
         <dt>June 1, 2019</dt> <dd>Workshop</dd>
       </section>
         
